# pym

./: .gitignore  .readthedocs.yaml  Makefile  README.rst  publican.cfg
.tx/: config
code/: alltypes.py  argvtest.py  averagen.py  bars.py  continue.py  copyfile.py  countwords.py  design1.py  design2.py  design3.py  download_file.py  evaluateequ.py  evaluationexp.py  fibonacci1.py  fibonacci2.py  global.py  integer.py  integer2.py  investment.py  ircnicks.txt  lenexample.py  local.py  matrixmul.py  multiplication.py  number100.py  palindrome.py  palindromefunc.py  powerseries.py  quadraticequation.py  salesmansalary.py  sample.txt  shorthand.py  showfile.py  sticks.py  student_teacher.py  students.py  students2.py  temperature.py  testhundred.py  theidemo.py
code/pymfactorial/: LICENSE  README.md  pyproject.toml
code/pymfactorial/pymfactorial/: __init__.py  fact.py
docs/: Makefile  classes.rst  click.rst  collections.rst  conf.py  datastructure.rst  editors.rst  exceptions.rst  file.rst  flask.rst  functions.rst  hardwaresimulation.rst  ifelse.rst  igd.rst  index.rst  installation.rst  looping.rst  loopingonhardware.rst  modules.rst  mu.rst  operatorsexpressions.rst  pep8.rst  projectstructure.rst  pypercard.rst  strings.rst  testing.rst  thebeginning.rst  typehinting.rst  variablesanddatatypes.rst  virtualenv.rst
en-US/: Appendix.xml  Author_Group.xml  Book_Info.xml  Chapter.xml  LegalNotice.xml  Preface.xml  Python_for_you_and_me.ent  Python_for_you_and_me.xml  Revision_History.xml  acknowledgment.xml  classes.xml  collections.xml  datastructure.xml  file.xml  (+21 more)
(+79 files in other folders)
