[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pymfactorial"
authors = [{name = "Kushal Das", email = "mail@kushaldas.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/kushaldas/pym"

[project.scripts]
myfact = "pymfactorial:cli"

[tool.flit.sdist]
include = ["license", "readme.md"]


